process reviewer comments